<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/scan_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="sans-serif"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="sans-serif"
        android:shadowColor="#aaaaaa"
        android:text="@string/tips"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/scan_logo"
        android:src="@drawable/scan_logo" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/action_ScanQRCode" />

</LinearLayout>